
For the latest information visit project web site: 
http://cayenne.apache.org/

To browse individual bug reports check out project issue tracker:
https://issues.apache.org/jira/browse/CAY

----------------------------------
Release: 4.0.2
Date:
----------------------------------

Bug Fixes:

CAY-2550 Modeler: ObjAttribute inspector modifies wrong columns in attribute table

----------------------------------
Release: 4.0.1
Date: December 20, 2018
----------------------------------

=======
Changes/New Features:

CAY-2473 Modeler: cleanup attributes and relationship editors
CAY-2474 Modeler: swap buttons in dialog toolbar
CAY-2475 Modeler: move inheritance icon to name column in objAttr table and objRel table
CAY-2476 Modeler: Fixed wrong behaviour of code generation dialog
CAY-2479 Modeler: update cgen dialog
CAY-2517 EventManager: optimization of adding listeners

Bug Fixes:

CAY-2419 Not changing highlight on selecting search results within one entity
CAY-2320 Modeler: Limit input into numeric fields to 10 digits
CAY-2449 Modeler: Needless scrollbar in Generate DB Schema result menu
CAY-2450 Modeler: Impossible to update Attribute title after syncing ObjEntity
CAY-2451 Modeler: ObjEntity "Edit" button doesn't open editor for Relationship
CAY-2454 Modeler: Unable to read validation message if it's truncated
CAY-2459 Modeler: DataMap Paste function is not working
CAY-2462 Modeler: Clipboard holds old content after application was reloaded
CAY-2464 ClassCastException when returning PRUNED_NODE in expression transformer
CAY-2470 Can't bind SQLExec parameters in a loop
CAY-2472 Clear cached replacement query on mutation in all indirect queries
CAY-2480 cayenne:cdbgen and cayenne:cgen have identical text in cayenne-maven-plugin
CAY-2497 Modeler: SQL Scripts tab isn't scrollable
CAY-2504 Broken detection logic of NoopEventBridge in DataRowStoreFactory
CAY-2505 EventBridge providers should be bound without scope

----------------------------------
Release: 4.0